[package]
name = "codeshaper"
version = "0.1.0"
authors = ["NewWars"]
description = """ANtlr4 and Regex AST Shaper"""
categories = ["regex", "antlr", "automation"]
keywords = ["text", "code", "manipulation", "regex", "antlr", "automation"]
license = "MIT"
documentation = "https://docs.rs/codeshaper"
repository = "https://github.com/OriDevTeam/CodeShaper"
readme = "README-CRATE.md"
edition = "2021"


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]


[dependencies]
