[package]
name = "codeshaper-core"
version = "0.1.0"
edition = "2021"


[dependencies]
stopwatch = "0.0.7"
glob = "0.3.0"
serde = { version = "1.0.151", features = ["derive"] }
json5 = "0.4.1"
knuffel = "3.2.0"
miette = { version= "5.9.0", features=["fancy"] }
once_cell = "1.16.0"
pest = "2.5.0"
pest_derive = "2.5.0"
lazy_static = "1.4.0"
regex = "1.9.5"
eyre = "0.6.8"
pretty_assertions = "1.4.0"
regex-automata = "0.3.8"
bimap = "0.6.3"
multi-map = "1.3.0"
indextree = "4.6.0"
enum_dispatch = "0.3.12"
