[package]
name = "codeshaper-general"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.66"
derive_builder = "0.11.2"
stopwatch = "0.0.7"
dyn-clone = "1.0.9"
glob = "0.3.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
erased-serde = "0.3.23"
json5 = "0.4.1"
knuffel = "2.0.0"
once_cell = "1.16.0"
regex = "1.7.0"
pest = "2.5.0"
pest_derive = "2.5.0"
