[package]
name = "codeshaper-general"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.68"
stopwatch = "0.0.7"
glob = "0.3.0"
serde = { version = "1.0.151", features = ["derive"] }
json5 = "0.4.1"
knuffel = "2.0.0"
miette = { version= "4.3.0", features=["fancy"] }
once_cell = "1.16.0"
pest = "2.5.0"
pest_derive = "2.5.0"
lazy_static = "1.4.0"
regex = "1.7.0"
